# ENPM808X-Human-Obstacle-Detection

./: .README.md.swo  .README.md.swp  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  dependencies.sh  doxygen
app/: CMakeLists.txt  DataLoader.cpp  DetectHuman.cpp  TrainSVM.cpp  VisionInput.cpp  main.cpp
docs/html/: DataLoaderTest_8cpp.html  DataLoaderTest_8cpp__incl.map  DataLoaderTest_8cpp__incl.md5  DataLoader_8cpp.html  DataLoader_8cpp__incl.map  DataLoader_8cpp__incl.md5  DataLoader_8hpp.html  DataLoader_8hpp__dep__incl.map  DataLoader_8hpp__dep__incl.md5  DataLoader_8hpp__incl.map  DataLoader_8hpp__incl.md5  DataLoader_8hpp_source.html  DetectHumanTest_8cpp.html  DetectHumanTest_8cpp__incl.map  DetectHumanTest_8cpp__incl.md5  DetectHuman_8cpp.html  DetectHuman_8cpp__incl.map  DetectHuman_8cpp__incl.md5  DetectHuman_8hpp.html  DetectHuman_8hpp__dep__incl.map  DetectHuman_8hpp__dep__incl.md5  DetectHuman_8hpp__incl.map  DetectHuman_8hpp__incl.md5  DetectHuman_8hpp_source.html  TrainSVMTest_8cpp.html  TrainSVMTest_8cpp__incl.map  TrainSVMTest_8cpp__incl.md5  TrainSVM_8cpp.html  TrainSVM_8cpp__incl.map  TrainSVM_8cpp__incl.md5  TrainSVM_8hpp.html  TrainSVM_8hpp__dep__incl.map  TrainSVM_8hpp__dep__incl.md5  TrainSVM_8hpp__incl.map  TrainSVM_8hpp__incl.md5  TrainSVM_8hpp_source.html  VisionInputTest_8cpp.html  VisionInputTest_8cpp__incl.map  (+39 more)
include/: DataLoader.hpp  DetectHuman.hpp  TrainSVM.hpp  VisionInput.hpp
results/: cppcheck.txt  cpplint.txt
test/: CMakeLists.txt  DataLoaderTest.cpp  DetectHumanTest.cpp  TrainSVMTest.cpp  VisionInputTest.cpp  main.cpp
(+78 files in other folders)
